kubernetes/apps/main/actions-runner-system/actions-runner-controller/runners/networkpolicy.yaml
---
# yaml-language-server: $schema=https://kube-schemas.pages.dev/cilium.io/ciliumnetworkpolicy_v2.json
# Jobs can reach the internet, the cluster and the nodes, but nothing else on the LAN.
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: &name home-ops-runner
spec:
  endpointSelector:
    matchLabels:
      runner: *name
  enableDefaultDeny:
    egress: false
  egressDeny:
    - toCIDRSet:
        - cidr: 10.0.0.0/8
          except:
            - 10.42.0.0/16
            - 10.43.0.0/16
    - toCIDR:
        - 172.16.0.0/12
    - toCIDRSet:
        - cidr: 192.168.0.0/16
          except:
            - 192.168.1.190/32
            - 192.168.1.191/32
            - 192.168.1.192/32
